--- a/_includes/card.html
+++ b/_includes/card.html
@@ -11,7 +11,7 @@
     </div>
     <div class="group">
         <div class="col span_1_of_2">
-            <img class="card-image lozad" data-src="{{site.url}}/cards/{{image}}.png" />
+            <img class="card-image lozad" data-src="cards/{{image}}.png" />
             <noscript><img class="card-image" src="cards/{{image}}.png" alt="The image for the card with the name {{card.name}}" /></noscript>
             <small><br/>
                 Download:
