--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
   <meta property="og:description" content="Cards for Analyzing and Reflecting on Doomed Software" />
   <meta property="og:url" content="https://www.cards42.org/" />
   <meta property="og:site_name" content="cards42.org" />
-  <meta property="og:image" content="{{ "/assets/cards42_preview.jpg" | prepend: site.baseurl | prepend: site.url }}" />
-  <meta property="og:image:secure_url" content="{{ "/assets/cards42_preview.jpg" | prepend: site.baseurl | prepend: site.url }}" />
+  <meta property="og:image" content="{{ "/assets/cards42_preview_en.jpg" | prepend: site.baseurl | prepend: site.url }}" />
+  <meta property="og:image:secure_url" content="{{ "/assets/cards42_preview_en.jpg" | prepend: site.baseurl | prepend: site.url }}" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:alt" content="An overview of the cards of the cards42 project" />
 
